Table "users" {
  "id" int [pk]
  "name" nvarchar(255)
  "pjs" nvarchar(255) [not null, check: `[pjs] IN ('created2', 'running2', 'done2', 'failure2')`]
  "pjs2" nvarchar(255) [not null, check: `[pjs2] IN ('created2', 'running2', 'done2', 'failure2')`]
  "pg" nvarchar(255) [not null, check: `[pg] IN ('male', 'female')`]
  "pg2" nvarchar(255) [not null, check: `[pg2] IN ('male2', 'female2')`]
}

Table "products" {
  "id" int [pk]
  "name" nvarchar(255) [note: 'Product name']
}

Ref:"schemaA"."locations"."id" < "schemaA"."products"."lid"

Ref "FK_1":"schemaA"."locations"."id" < "schemaA"."products"."lid2"

Ref:"users"."id" < "ecommerce"."users"."id"

Ref "name_optional":"users"."name" < "ecommerce"."users"."id"

Ref:"ecommerce"."users"."id" < "schemaA"."products"."name"

Ref:"users"."id" < "schemaA"."locations"."name"

Table "ecommerce"."users" {
  "id" int [pk]
  "name" nvarchar(255)
  "ejs" nvarchar(255) [not null, check: `[ejs] IN ('created2', 'running2', 'done2', 'failure2')`]
  "ejs2" nvarchar(255) [not null, check: `[ejs2] IN ('created2', 'running2', 'done2', 'failure2')`]
  "eg" nvarchar(255) [not null, check: `[eg] IN ('male', 'female')`]
  "eg2" nvarchar(255) [not null, check: `[eg2] IN ('male2', 'female2')`]

  Indexes {
    (name, ejs) [name: "idx_1"]
  }
  Note: 'Note on table users of schema ecommerce'
}

Table "schemaA"."products" {
  "id" int [pk]
  "name" nvarchar(255)
  "created_at" varchar(255) [default: `now()`]
  "lid" int
  "lid2" int

  Indexes {
    (lid, lid2) [unique, name: "unique_lid_lid2"]
  }
  Note: 'Note on table products of schemaA'
}

Table "schemaA"."locations" {
  "id" int [pk]
  "name" nvarchar(255)
  Note: 'This is a note in table "schemaA"."locations"'
}
